# cpp2-2

./: README  README.en.md  README.md  Tank-Battle.pro  baseplayscene.cpp  baseplayscene.h  build_project.bat  bullet.cpp  bullet.h  button.cpp  button.h  choosemodelscene.cpp  choosemodelscene.h  game.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h  mapdrawer.cpp  mapdrawer.h  playscene.cpp  playscene.h  playscene1.cpp  playscene1.h  playscene2.cpp  playscene2.h  resourcemanager.cpp  resourcemanager.h  tank.cpp  tank.h
NightSurvivors/: CMakeLists.txt  CMakePresets.json  NightSurvivors.pro  README.md  build.bat  build_and_run.bat  clean.bat  rebuild_and_run.bat
NightSurvivors/build-new/: .ninja_deps  .ninja_log  build.ninja
NightSurvivors/build-new/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
NightSurvivors/build-new/NightSurvivors_autogen/: deps  mocs_compilation.cpp
NightSurvivors/build-new/NightSurvivors_autogen/JCP2AIONHY/: moc_gamemenuui.cpp.d  moc_introductionui.cpp.d  moc_mainscene.cpp.d  moc_saveui.cpp.d  moc_settingsui.cpp.d  moc_shopui.cpp.d  moc_upgradeui.cpp.d
NightSurvivors/build-new/NightSurvivors_autogen/KLZYWGTNTX/: moc_resourcemanager.cpp.d  moc_savefile.cpp.d
NightSurvivors/build-new/NightSurvivors_autogen/QILZBHS5VD/: moc_bullet.cpp.d  moc_drop.cpp.d  moc_enemy.cpp.d  moc_hero.cpp.d
NightSurvivors/build-new/NightSurvivors_autogen/TNQXAZC2F3/: moc_gamemap.cpp.d  moc_gamestate.cpp.d  moc_obstacle.cpp.d  moc_weapon.cpp.d
NightSurvivors/forms/: mainscene.ui
NightSurvivors/include/core/: gamemap.h  gamestate.h  obstacle.h  weapon.h
NightSurvivors/include/entities/: drop.h  enemy.h  hero.h
NightSurvivors/include/ui/: gamemenuui.h  introductionui.h  mainscene.h  saveui.h  settingsui.h  shopui.h  upgradeui.h
NightSurvivors/include/utils/: resourcemanager.h  savefile.h
NightSurvivors/py/: audio_generator.py  character_generator.py  map_generator.py  resources.py  ui_generator.py
NightSurvivors/resources/: game_resources.qrc
NightSurvivors/resources/audio/music/: boss.txt  main_theme.txt
NightSurvivors/resources/audio/sfx/: hit.txt  level_up.txt  menu_click.txt  pickup.txt
NightSurvivors/resources/ui/styles/: style.qss
NightSurvivors/src/: main.cpp
NightSurvivors/src/core/: enemycontroller.cpp  gamemap.cpp  gamestate.cpp  weapon.cpp
NightSurvivors/src/entities/: drop.cpp  enemy.cpp  hero.cpp
NightSurvivors/src/ui/: gamemenuui.cpp  introductionui.cpp  mainscene.cpp  saveui.cpp  settingsui.cpp  shopui.cpp  upgradeui.cpp
NightSurvivors/src/utils/: resourcemanager.cpp  savefile.cpp
NightSurvivors/tools/: generate_resources.py
Survivors/: .gitignore  CMakeLists.txt  README  README.md  build.bat  game.exp  simple_build.bat  tempCodeRunnerFile.cpp  tempCodeRunnerFile.python  实验报告.md
Survivors/Assets/: bg.jpg.crdownload
Survivors/Assets/custom/: enemy1.txt  enemy2.txt  enemy3.txt
Survivors/GameLogic/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnemyController.cpp  EnemyController.h  EnemyDynamicWeapon.cpp  EnemyDynamicWeapon.h  ExpBall.cpp  ExpBall.h  FloatingOrb.cpp  FloatingOrb.h  GameMap.cpp  GameMap.h  GameState.cpp  GameState.h  Hero.cpp  Hero.h  Option.h  PaintInfo.cpp  PaintInfo.h  Weapon.cpp  Weapon.h  WeaponEnemy.cpp  config.cpp  config.h
Survivors/Structure/: project_structure.txt
Survivors/example/: game.cpp  win32_platform.cpp
Survivors/src/: README.md  game_module.h  gamemain.cpp  gamemain.h  gameres.qrc  hero.h  main.cpp
Survivors/src/GameObjects/: Hero.cpp  Hero.h
Survivors/src/assets/: assets.cpp  assets.h
Survivors/src/audio/: sound.h
Survivors/src/core/: assets.cpp  assets.h  common.h  config.h  defines.h  game.h  gameData.h  game_fixed.cpp  input.h  logger.h  platform.h  shared.h  win32_platform.cpp
Survivors/src/dialogs/: aboutdialog.cpp  aboutdialog.h  gameoverdialog.cpp  gameoverdialog.h  heroselectdialog.cpp  heroselectdialog.h  settingdialog.cpp  settingdialog.h  upgradedialog.cpp  upgradedialog.h
Survivors/src/entities/: enemy.h  entity.h  obstacle.h  pickup.h  player.h
Survivors/src/game/: game.cpp  gameData.h
Survivors/src/graphics/: colors.h  custom_gl.h  gl_renderer.cpp  render_interface.cpp  render_interface.h  shader_header.h
Survivors/src/input/: input.h
Survivors/src/platform/: win32_platform.cpp
Survivors/src/rendering/: custom_gl.h  gl_renderer.cpp  render_interface.cpp  render_interface.h  shader_header.h
Survivors/src/ui/: gamemain.ui  menu.cpp  menu.h  texts.h
Survivors/src/utils/: cakez_macros.h  easing_functions.h  kyc_macros.h  logger.h  my_math.h  sound.h
Survivors/src/weapons/: weapon.h
VampireSurvivors/: README.md  VampireSurvivors.pro  build.bat  bullet.cpp  bullet.h  clean.bat  enemy.cpp  enemycontroller.cpp  gamemap.cpp  gamestate.cpp  gamestate.h  generate_game_assets.py  generate_resources.bat  hero.cpp  hero.h  main.cpp  mainscene.cpp  mainscene.ui  savefile.cpp  saveui.cpp  shopui.cpp  weapon.cpp  weapon_generator.py
VampireSurvivors/include/core/: gamestate.h  weapon.h
VampireSurvivors/include/entities/: enemy.h  hero.h
VampireSurvivors/include/io/: savefile.h
VampireSurvivors/include/ui/: gamemenuui.h  introductionui.h  mainscene.h  saveui.h  settingsui.h  shopui.h  upgradeui.h
VampireSurvivors/include/utils/: resourcemanager.h
VampireSurvivors/resources/: resources.qrc
VampireSurvivors/src/: main.cpp
VampireSurvivors/src/core/: enemycontroller.cpp  gamemap.cpp  gamestate.cpp  obstacle.cpp  weapon.cpp
VampireSurvivors/src/entities/: bullet.cpp  drop.cpp  enemy.cpp  hero.cpp
VampireSurvivors/src/ui/: gamemenuui.cpp  introductionui.cpp  mainscene.cpp  saveui.cpp  settingsui.cpp  shopui.cpp  upgradeui.cpp
VampireSurvivors/src/utils/: main.cpp  savefile.cpp
(+5 files in other folders)
